Make `/fprofile dump` more flexible